@@ -1,3 +1,9 @@
+2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/applestreamer/hlsring.py:
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Append the GET arguments to the playlist
+
 2010-02-24  Marc-André Lureau  <mlureau@flumotion.com>
 
 	* flumotion/component/muxers/mpegts/mpegts.py:
